Invalidate doc before mutation for new query system

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Critical - P2
    • 2.5.5
    • Affects Version/s: None
    • Component/s: Querying, Write Ops
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Currently we only invalidate on a move (delete), but we need to invalidate any time the document mutates since clients may be holding onto related state from the old version.

            Assignee:
            hari.khalsa@10gen.com
            Reporter:
            Scott Hernandez (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: