SERVER-12046: Invalidate doc before mutation for new query system